# ChangeLog for sys-apps/net-tools
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/net-tools/ChangeLog,v 1.19 2003/05/18 21:36:52 dragon Exp $

*net-tools-1.60-r7 (18 May 2003)

  18 May 2003; Nicholas Wourms <dragon@gentoo.org> net-tools-1.60-r7.ebuild:
  Version bump. Add Manifest. Update ether-wake to Donald Becker's latest
  version (1.08). Add an english manpage for ether-wake. Add newline characters
  to various multi-line string literals in order to fix gcc-3.3 compile errors.
  Update lib/masq_info.c to support ipvs configurations. Update netstat to fix
  interface name output and to support modifying the statistics refresh delay as
  a command-line argument.

*net-tools-1.60-r6 (18 Mar 2003)

  18 Mar 2003; Martin Holzer <mholzer@gentoo.org> net-tools-1.60-r5.ebuild,
  net-tools-1.60-r5.ebuild, net-tools-1.60-r6.ebuild:
  Fixed manpages are not installed cause of nls use flag.

*net-tools-1.60-r5 (16 Jul 2002)

  18 Mar 2003; Martin Holzer <mholzer@gentoo.org> net-tools-1.60-r5.ebuild:
  Now installing man pages. Closes #17562.

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> net-tools-1.60-r5.ebuild :
  Marked as stable for mips.

  20 Feb 2003; Zach Welch <zwelch@gentoo.org> net-tools-1.60-r5.ebuild :
  Added arm to keywords.

  10 Feb 2003; Seemant Kulleen <seemant@gentoo.org> net-tools-1.60-r4.ebuild
  net-tools-1.60-r5.ebuild :

  Many things -- moved the files and patches from files/ subdirectory into a
  tarball and sent it to the mirrors.  Also, changed sed expression
  delimiters from / to :, closing bug #15006 by Blu3
  <david+gentoo.org@blue-labs.org>

  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> net-tools-1.60-r5.ebuild :
  Added hppa to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  19 Nov 2002; Mike Frysinger <vapier@gentoo.org> :
  Under heavy loads the timestamps on the config files may cause