@@ -1,5 +1,5 @@
-MD5 fa40f8c0a017cbfdfd3463b6b3055a92 ChangeLog 3840
-MD5 9f2b773c95973817537f36ce81683a32 net-tools-1.60-r7.ebuild 2546
+MD5 8b6c3a69e60e40032188b3cdbe804a34 ChangeLog 3992
 MD5 97c6879f072588bdaa14c894380672f4 net-tools-1.60-r6.ebuild 2278
+MD5 6000f3b18b28e3e02d99451ccd3f285c net-tools-1.60-r7.ebuild 2669
 MD5 a959c1cde872578cac11854c55ab9d55 files/digest-net-tools-1.60-r6 145
 MD5 b1288e643ec595e07f37d7fd0d755ba5 files/digest-net-tools-1.60-r7 148
